# tetrinria

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README  README.md
core/: CMakeLists.txt  color.c  game.c  game.h  grid.c  grid.h  init.c  init.h  piece.c  piece.h  positionInGrid.c  positionInGrid.h  position_in_grid.c  position_in_grid.h  rgb_color.c  rgb_color.h  tetromino.c  tetromino.h  tetromino_srs.c  tetromino_srs.h
core/test/: CMakeLists.txt  test_tetrinria_core.c  test_tetris_core.c
core/test/KWstyle/: Tetris.kws.xml
gtk/: CMakeLists.txt  gui.c  gui.h  tetrinria-gtk.c  tetris-gtk.c  window.c  window.h
gtk/test/: CMakeLists.txt  test_tetrinria_gtk.c  test_tetris_gtk.c
kwstyle/: CMakeLists.txt  FilesToCheck.txt  Tetris.kws.xml
